// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`/private DELETE /:id - should delete 1`] = `[RepositoryEntityNotFoundError: Entity not found]`;

exports[`/private PATCH /:id - should update 1`] = `
Identity {
  "_address": null,
  "_birthDate": null,
  "_created": 2020-01-01T07:00:00.000Z,
  "_displayName": null,
  "_events": Array [
    Object {
      "date": 2020-01-01T07:00:00.000Z,
      "name": "identity_created",
      "payload": Object {
        "address": null,
        "birthDate": null,
        "displayName": null,
        "familyName": null,
        "gender": null,
        "givenName": null,
        "gravatar": null,
        "locale": null,
        "middleName": null,
        "nickname": null,
        "phoneNumber": null,
        "phoneNumberVerified": false,
        "picture": null,
        "preferredUsername": null,
        "profile": null,
        "username": null,
        "website": null,
        "zoneInfo": null,
      },
    },
    Object {
      "date": 2020-01-01T07:00:00.000Z,
      "name": "identity_given_name_changed",
      "payload": Object {
        "givenName": "new-givenName",
      },
    },
    Object {
      "date": 2020-01-01T07:00:00.000Z,
      "name": "identity_middle_name_changed",
      "payload": Object {
        "middleName": "new-middleName",
      },
    },
  ],
  "_familyName": null,
  "_gender": null,
  "_givenName": "new-givenName",
  "_gravatar": null,
  "_id": "0d573da5-97d7-44b1-8aee-9951e177d0b2",
  "_locale": null,
  "_middleName": "new-middleName",
  "_nickname": null,
  "_phoneNumber": null,
  "_phoneNumberVerified": false,
  "_picture": null,
  "_preferredUsername": null,
  "_profile": null,
  "_updated": 2020-01-01T07:00:00.000Z,
  "_username": null,
  "_version": 1,
  "_website": null,
  "_zoneInfo": null,
}
`;

exports[`/private PATCH /:id/address 1`] = `
Identity {
  "_address": Object {
    "country": "country",
    "locality": "locality",
    "postalCode": "postalCode",
    "region": "region",
    "streetAddress": "streetAddress",
  },
  "_birthDate": null,
  "_created": 2020-01-01T07:00:00.000Z,
  "_displayName": null,
  "_events": Array [
    Object {
      "date": 2020-01-01T07:00:00.000Z,
      "name": "identity_created",
      "payload": Object {
        "address": null,
        "birthDate": null,
        "displayName": null,
        "familyName": null,
        "gender": null,
        "givenName": null,
        "gravatar": null,
        "locale": null,
        "middleName": null,
        "nickname": null,
        "phoneNumber": null,
        "phoneNumberVerified": false,
        "picture": null,
        "preferredUsername": null,
        "profile": null,
        "username": null,
        "website": null,
        "zoneInfo": null,
      },
    },
    Object {
      "date": 2020-01-01T07:00:00.000Z,
      "name": "identity_address_changed",
      "payload": Object {
        "address": Object {
          "country": "country",
          "locality": "locality",
          "postalCode": "postalCode",
          "region": "region",
          "streetAddress": "streetAddress",
        },
      },
    },
  ],
  "_familyName": null,
  "_gender": null,
  "_givenName": null,
  "_gravatar": null,
  "_id": "c8909659-a490-4d6c-88d3-6a01712b7c64",
  "_locale": null,
  "_middleName": null,
  "_nickname": null,
  "_phoneNumber": null,
  "_phoneNumberVerified": false,
  "_picture": null,
  "_preferredUsername": null,
  "_profile": null,
  "_updated": 2020-01-01T07:00:00.000Z,
  "_username": null,
  "_version": 1,
  "_website": null,
  "_zoneInfo": null,
}
`;

exports[`/private PATCH /:id/username 1`] = `
Identity {
  "_address": null,
  "_birthDate": null,
  "_created": 2020-01-01T07:00:00.000Z,
  "_displayName": null,
  "_events": Array [
    Object {
      "date": 2020-01-01T07:00:00.000Z,
      "name": "identity_created",
      "payload": Object {
        "address": null,
        "birthDate": null,
        "displayName": null,
        "familyName": null,
        "gender": null,
        "givenName": null,
        "gravatar": null,
        "locale": null,
        "middleName": null,
        "nickname": null,
        "phoneNumber": null,
        "phoneNumberVerified": false,
        "picture": null,
        "preferredUsername": null,
        "profile": null,
        "username": null,
        "website": null,
        "zoneInfo": null,
      },
    },
    Object {
      "date": 2020-01-01T07:00:00.000Z,
      "name": "identity_username_changed",
      "payload": Object {
        "username": null,
      },
    },
  ],
  "_familyName": null,
  "_gender": null,
  "_givenName": null,
  "_gravatar": null,
  "_id": "9318e77b-10bf-413a-89be-ca36056b8723",
  "_locale": null,
  "_middleName": null,
  "_nickname": null,
  "_phoneNumber": null,
  "_phoneNumberVerified": false,
  "_picture": null,
  "_preferredUsername": null,
  "_profile": null,
  "_updated": 2020-01-01T07:00:00.000Z,
  "_username": "new-username",
  "_version": 1,
  "_website": null,
  "_zoneInfo": null,
}
`;
